    Auto loading will only trigger once per game change.
    This option is disabled by default.
  - Add "Auto load primary preset" check box in "Preset" tab, which enables or disables
    "Auto load preset" system.
  - Add "primary preset" tagging function in "Preset" tab, user can "Right" click on a preset
    and select "Set primary for ***" to tag a preset as "primary" for specific game.
    Primary preset will be auto loaded when "Auto load primary preset" is enabled and
    a new or different game is started & active.
    Note, a single preset can have tags from multiple games.

* Vehicle Brand Editor
  - Now allows multi-selection for deleting vehicle brand entries.
  - Fixed an issue where some vehicle info is missing while importing from LMU Rest API.
    Make sure to import again to update all vehicle brand info from LMU.

* Wheels module
  - Add "maximum_rotation_difference_*" options, which sets maximum rotation difference (percentage)
    between left or right wheel and same axle for limiting wheel radius calculation.
    Setting higher difference value may result inaccurate wheel radius reading.
    Default value is `0.002`.

* Brake bias Widget
  - Add "layout" option, which sets display orientation.
    Default is horizontal. Set "0" to show vertically.

* Cruise Widget
  - Add "layout" option, which sets display orientation.
    Default is horizontal. Set "0" to show vertically.
  - Add "odometer_maximum_digits" option, which sets maximum number of display digits.

* Instrument Widget
  - Changed default "layout" setting value to "1" for horizontal layout
    (as opposite to old "0" value) for consistency.
    User may need to edit old value to "1" to display horizontal layout.

* Tyre wear Widget
  - Now uses laptime pace for calculating "tyre lifespan in minutes".

* Weather forecast Widget
  - The "now" column always shows current weather conditon
    even if RestAPI Module is disabled.

2.17.4 (2024-08-30)
-----------------------------